dabubble/src/app/thread/thread.component.scss
.thread {
  width: 100%;
  height: calc(100vh - 145px);
  box-sizing: border-box;
  background-color: #ffffff;
  border-radius: 30px;
}

.header {
  width: 100%;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 32px 40px;
  position: relative;
  box-shadow: 0 10px 10px -10px rgba($color: #000000, $alpha: 0.2);
}

.headline-container {
  display: flex;
  align-items: center;
  gap: 5px;
}

.channel-name-container {
  display: flex;
  align-items: center;
  gap: 5px;
}

.tag-purple {
  display: none;
}

.users-display {
  height: 46px;
  display: flex;
  align-items: center;
  gap: 10px;
}

.user-pics {
  width: 100px;
  height: 40px;
  display: flex;
  align-items: center;
  flex-direction: row-reverse;

  img {
    width: 40px;
    height: 40px;
    border-radius: 30px;
    border: 2px solid #ffffff;
    margin-right: -12px;
    box-sizing: content-box;
  }

  img:first-child {
    margin-right: 0;
  }
}

.add-user-btn {
  background-color: rgba(0, 0, 0, 0.1);
}

.chat-content {
  height: calc(100% - 140px);
  display: flex;
  flex-direction: column;
  justify-content: start;
}

.chat-history {
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding-top: 20px;
  overflow-y: auto;
  scrollbar-width: none;
  flex-grow: 1;
}

.chat-history::-webkit-scrollbar {
  width: 0;
  height: 0;
  background: transparent;
}

.chat-day-section {
  display: flex;
  flex-direction: column;
  justify-content: end;
  gap: 16px;
  margin-top: 1px;
}

.chat-date-section {
  width: 100%;
  height: 35px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.chat-date-section::before,
.chat-date-section::after {
  content: "";
  flex: 1;
  height: 0.5px;
  background: #adb0d9;
  margin: 0 0px;
}

.chat-date-section::before {
  margin-left: 35px;
}

.chat-date-section::after {
  margin-right: 35px;
}

.chat-date {
  width: fit-content;
  display: flex;
  justify-content: center;
  margin: 25px 0;
  border: 1px solid #adb0d9;
  border-radius: 20px;
  padding: 5px 15px;
}

.chat-section {
  display: flex;
  gap: 30px;
  padding: 10px 45px;
  position: relative;
  &:hover {
    background-color: #eceefe;
    .chat-message.left {
      background-color: #ffffff;
    }
    .chat-dialogue {
      display: flex;
    }
  }
}

.chat-section.reverse {
  flex-direction: row-reverse;
}

.chat-section.editing {
  background-color: #eceefe;

  .chat-dialogue {
    display: none;
  }
}

.chat-dialogue {
  height: 46px;
  position: absolute;
  right: 45px;
  top: -16px;
  background-color: #ffffff;
  border: 1px solid #adb0d9;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  border-bottom-left-radius: 25px;
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  padding: 3px 15px 3px 20px;
  display: none;
}

.chat-dialogue.reverse {
  right: unset;
  left: 60px;

  &.top {
    left: 20px;
  }

  .add-reaction-btn.reverse {
    display: flex;
  }
  .add-reaction-dialogue {
    left: 28px;
    border-top-left-radius: unset;
    border-top-right-radius: 30px;
    border-bottom-left-radius: 30px;
    border-bottom-right-radius: 30px;
  }
  .edit-comment-dialogue {
    display: flex;
  }
}

.add-reaction-btn {
  width: 36px;
  height: 36px;
  border-radius: 20px;
  border: none;
  background-color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  &:hover {
    background-color: #eceefe;
    .hover-icon {
      display: none;
    }
    .hover-icon-purple {
      display: block;
    }
  }
}

.add-reaction-btn.reverse {
  display: none;
}

.smiley-img {
  width: 24px;
  height: 24px;
}

.reactions-display-container,
.reactions-display-container-below {
  position: relative;
}

.add-reaction-dialogue {
  width: fit-content;
  max-width: 200px;
  overflow-x: auto;
  position: absolute;
  top: 20px;
  right: 28px;
  background-color: #ffffff;
  border-top-left-radius: 30px;
  border-bottom-left-radius: 30px;
  border-bottom-right-radius: 30px;
  padding: 10px 20px;
  box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.2);
  font-size: 20px;
  white-space: nowrap;
  display: flex;
  z-index: 10;
}

.add-reaction-dialogue.below {
  top: unset;
  bottom: 20px;
  border-top-right-radius: 30px;
  border-bottom-right-radius: unset;
}

.edit-comment-container {
  position: relative;
}

.edit-comment-dialogue {
  position: absolute;
  top: 20px;
  left: 30px;
  background-color: #ffffff;
  border-top-right-radius: 30px;
  border-bottom-left-radius: 30px;
  border-bottom-right-radius: 30px;
  padding: 10px 20px;
  box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.2);
  font-size: 20px;
  white-space: nowrap;
  z-index: 1;
  display: none;
  cursor: pointer;
}

.edit-comment {
  padding: 10px 20px;
  border-radius: 30px;
  &:hover {
    background-color: #eceefe;
    color: #535af1;
    font-weight: 700;
  }
}

.hover-icon-purple {
  display: none;
}

.chat-user-img {
  width: 70px;
  height: 70px;
  border-radius: 40px;

  &.grayscale {
    filter: grayscale(100%);
  }
}

.chat-info-container {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.chat-info-container.reverse {
  align-items: end;
}

.chat-start {
  display: flex;
  align-items: center;
  gap: 20px;
}

.chat-start.reverse {
  flex-direction: row-reverse;
  justify-content: end;
}

.chat-message {
  padding: 15px;
  border-bottom-right-radius: 30px;
  border-bottom-left-radius: 30px;
  width: fit-content;
}

.chat-message.left {
  border-top-right-radius: 30px;
}

.chat-message.right {
  border-top-left-radius: 30px;
  background-color: #797ef3;
  color: #ffffff;
}

.chat-answered {
  display: flex;
  justify-content: flex-end;
  gap: 20px;
}

.reactions {
  display: flex;
  align-items: center;
  gap: 8px;
}

.reaction-btns {
  display: flex;
  align-items: center;
  justify-content: end;
  flex-wrap: wrap;
  gap: 10px;
}

.reaction-btn {
  width: 64px;
  height: 34px;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  gap: 10px;
  border: 1px solid #adb0d9;
  border-radius: 20px;
  padding: 5px 10px;
  background-color: #ffffff;
  position: relative;
  cursor: pointer;
  &:hover {
    border-color: #797ef3;
    .r-btn-hover-display {
      display: block;
    }
  }

  img {
    width: 24px;
    height: 24px;
    border-radius: none !important;
  }
}

.reaction-btn.reacted {
  border-color: #797ef3;
}

.r-btn-hover-display {
  display: none;
}

.r-btn-hover-display-content {
  min-width: 158px;
  width: fit-content;
  height: 112px;
  background-color: #444df2;
  padding: 15px 10px;
  box-sizing: border-box;
  position: absolute;
  bottom: 33px;
  left: 32px;
  border-top-left-radius: 30px;
  border-top-right-radius: 30px;
  border-bottom-right-radius: 30px;
  color: #ffffff;
  font-size: 16px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 5px;
  z-index: 1;
}

.reaction-btn-t-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.no-wrap {
  white-space: nowrap;
}

.more-reactions {
  width: fit-content;
  font-size: 16px;
}

.hidden-answers-line {
  width: calc(100% - 70px);
  display: flex;
  align-items: center;
  padding: 0 35px;
}

.hidden-answers {
  display: flex;
  justify-content: center;
  align-items: center;
}

.line {
  content: "";
  flex: 1;
  height: 1px;
  background: #adb0d9;
  margin: 0 0 0 20px;
}

.form {
  width: 100%;
  box-sizing: border-box;
  padding: 0 20px;
  margin-top: 20px;
}

.form-field {
  position: relative;
  width: 100%;
  height: 145px;
  border: 1px solid #adb0d9;
  border-radius: 20px;
  background-color: #ffffff;
  padding: 20px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  border: 1px solid #adb0d9;
  cursor: pointer;
  &:hover {
    border-color: #797ef3;
  }
  &:focus-within {
    border-color: #535af1;
  }
}

.input {
  width: 100%;
  height: calc(100% - 30px);
  border: none;
  outline: none;
  font-size: 1.1rem;
  background: transparent;
  padding: 0;
  margin: 0;
  box-shadow: none;
  overflow-y: auto;
  font-family: Nunito, "Helvetica Neue", sans-serif;
  resize: none;
}

.input-icon-bar {
  width: calc(100% - 40px);
  display: flex;
  justify-content: space-between;
  position: absolute;
  bottom: 14px;
}

.icon-bar {
  display: flex;
  align-items: center;
  gap: 10px;
}

.icon-30 {
  width: 30px;
  height: 30px;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
}

.user-name {
  cursor: pointer;
  &:hover {
    color: #535af1;
  }

  &.missing {
    cursor: default;
    pointer-events: none;

    &:hover {
      color: inherit;
    }
  }
}

.chat-edit-wrapper {
  background: #ffffff;
  border-radius: 20px;
  padding: 10px;
  border: 1px solid #adb0d9;
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: relative;

  &:focus-within {
    border-color: #535af1;
  }

  .edit-textarea {
    min-height: 40px;
    max-height: 300px;
    width: 100%;
    min-width: 300px;
    border: none;
    border-radius: 8px;
    padding: 0;
    font-family: "Nunito";
    font-size: 18px;
    color: #686868;
    resize: none;
    overflow: auto;
    outline: none;
    transition: border-color 0.2s ease-in-out;
  }

  .edit-actions {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .btn-wrapper {
      display: flex;
      gap: 8px;
    }

    .btn {
      padding: 6px 12px;
      border-radius: 50px;
      border: 1px solid #797ef3;
      cursor: pointer;
      font-family: "Nunito";
      font-size: 16px;
      font-weight: 700;
      transition: all 0.2s ease;

      &.save {
        background-color: #444df2;
        color: #fff;

        &:hover {
          filter: opacity(80%);
        }
      }

      &.cancel {
        background-color: white;
        color: #444df2;

        &:hover {
          background-color: #444df2;
          color: white;
        }
      }
    }
  }
}

@media (max-width: 880px) {
  .thread {
    height: calc(100vh - 80px) !important;
    border-radius: 0 !important;
  }

  .header {
    padding: 10px 16px;
  }

  .chat-content {
    height: calc(100% - 80px);
    overflow-y: auto;
  }

  .chat-section {
    gap: 16px;
    padding: 10px 50px 10px 16px;
  }

  .chat-section.reverse {
    flex-direction: row-reverse;
    padding: 10px 16px 10px 50px;
  }

  .chat-user-img {
    width: 50px;
    height: 50px;
  }

  .hidden-answers-line {
    width: calc(100% - 40px);
    padding: 0 20px;
  }

  .chat-date-section::before {
    margin-left: 20px;
  }

  .chat-date-section::after {
    margin-right: 20px;
  }

  .icon-bar {
    gap: 5px;
  }

  .form {
    width: 100%;
    box-sizing: border-box;
    padding: 0 16px;
    margin-top: 20px;
  }
}

